infra/targeting-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: feature-flags
  labels:
    app: targeting-service
spec:
  type: ClusterIP
  ports:
  - port: 8003
    targetPort: 8003
    protocol: TCP
    name: http
  selector:
    app: targeting-service
  sessionAffinity: None
