infra/targeting-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ingress
  namespace: feature-flags
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - targeting-api.arthurrosa.blog
    secretName: targeting-service-tls
  rules:
  - host: targeting-api.arthurrosa.blog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: targeting-service
            port:
              number: 8003
